--- a/css/styles.css
+++ b/css/styles.css
@@ -290,9 +290,14 @@
   border-style: none;
 }
 
+.link-portfolio {
+  cursor: pointer;
+}
+
 .product-list-section {
   display: flex;
   justify-content: center;
+  margin-bottom: 94px;
 }
 
 .product-list-container {
